[tool.poetry]
name = "blesk"
version = "0.1.0"
description = "Controls a standing desk using BLE"
authors = ["Daniel Hall <blesk@danielhall.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
bleak = "^1.0.0"
click = "^8.1.7"
platformdirs = "^4.3.6"

[tool.poetry.scripts]
blesk = "blesk.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
