[tool.poetry]
name = "blesk"
version = "0.1.0"
description = "Controls a standing desk using BLE"
authors = ["Daniel Hall <blesk@danielhall.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
bleak = "^1.0.0"
click = "^8.1.7"
platformdirs = "^4.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
ruff = "^0.14.14"

[tool.poetry.scripts]
blesk = "blesk.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Ignore deprecation warnings from pytest-asyncio (library issue, not our code)
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:pytest_asyncio",
    "ignore:.*asyncio.get_event_loop_policy.*:DeprecationWarning:pytest_asyncio",
    "ignore:.*asyncio.set_event_loop_policy.*:DeprecationWarning:pytest_asyncio",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
