[tool.poetry]
name = "blesk"
version = "0.2.2"
description = "Controls a standing desk using BLE"
authors = ["Daniel Hall <blesk@danielhall.me>"]
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/smarthall/blesk"
repository = "https://github.com/smarthall/blesk"
keywords = ["bluetooth", "ble", "standing-desk", "desky", "desk-control"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Home Automation",
    "Topic :: System :: Hardware",
]

[tool.poetry.dependencies]
python = ">=3.13,<3.15"
bleak = "^2.0.0"
click = "^8.1.7"
platformdirs = "^4.3.6"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.0.0"
pytest-cov = "^7.0.0"
ruff = "^0.15.0"
pre-commit = "^4.5.1"

[tool.poetry.scripts]
blesk = "blesk.cli:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    # Ignore deprecation warnings from pytest-asyncio (library issue, not our code)
    "ignore:.*asyncio.iscoroutinefunction.*:DeprecationWarning:pytest_asyncio",
    "ignore:.*asyncio.get_event_loop_policy.*:DeprecationWarning:pytest_asyncio",
    "ignore:.*asyncio.set_event_loop_policy.*:DeprecationWarning:pytest_asyncio",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
